first draft of into page, and starting to work on about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
  
  /*----------------------------Navbar----------------- */
 .navbar {
-    background-color: black;
+    background-color:black;
     margin-top: 0;
     padding-top: 0;
     border-top: 5px solid #f8a13d;
@@ -59,17 +59,107 @@ background-color: white !important; }
 
 #background-image {
     background: url('../images/burger-menu.jpg') no-repeat bottom right fixed;
-    width: 100vw;
-    height: 50vw; 
+    width: 100%;
+    height: 750px; 
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    position: relative;
+    position: absolute;
     overflow: hidden;
     border-left: 5px solid #f8a13d;
+    text-align: center;
+
+}
     
-} 
+#main-image{
+    height: 750px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+
+ /*----------------------------review-post----------------- */
+
+
+#cover-text {
+    font-size: 130%;
+    font-family: "Roboto", sans-serif;
+    font-weight: ;
+    letter-spacing: 4px;
+    width: 450px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    top: 200px;
+    left: 250px;
+    position: absolute;
+    }
+
+.best-place {
+    color: #fa931c;
+    font-size: 20px;
+    padding: 0;
+    font-weight: 400;
+    margin-bottom: 0;
+}
+
+.review-text {
+    color: #b5b3c2;
+    font-size: 15px;
+    margin-top: 0;
+    font-weight: 400;
+}
+
+.btn.btn-outline-warning {
+    color:#fa931c;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    float: center;
+    border-color: #fa931c;
+    margin-left: 100px;
+}
+
+.btn.btn-outline-warning:hover {
+    color: black;
+    background-color: #fa931c;
+}
+
+.star-rating {
+    color:#fa931c;
+}
+/*----------------------------Main and About spacer----------------- */
+
+.spacer {
+    height: 50px;
+    background-color: black;
+    border-left: 5px solid #f8a13d;
+}
 
 /*----------------------------About----------------- */
-.about-section {
-    height: 1200px;
+#about-image {
+    background: url('../images/about-image.jpg') no-repeat bottom right fixed;
+    width: 100%;
+    height: 750px; 
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    overflow: hidden;
+    border-left: 5px solid #f8a13d;
+    text-align: center;
+
 }
+    
+#about-section{
+    height: 750px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+/*----------------------------media screen----------------- */
+
+@media screen and (max-width: 943px) {
+
+#cover-text {
+        left: 0px;
+    }
