--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,23 +127,25 @@ background-color: white !important; }
     background-color: #fa931c;
 }
 
-
-/*----------------------------Main and About spacer----------------- */
-
-.spacer {
-    height: 50px;
-    background-color: black;
-    border-left: 5px solid #fa931c;
-    color: #fa931c;
-    font-size: 35px;
+.arrow-1 {
+    font-size: 50px;
+    width: 395px;
+    height: 100px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 10px;
     text-align: center;
+    left: 500px;
+    position: absolute;
+    color: #fa931c;
 }
+
 
 /*----------------------------About----------------- */
 #about-image {
     background: url('../images/about-image.jpg') no-repeat bottom right fixed;
     width: 100%;
-    height: 900px; 
+    height: 880px; 
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
@@ -154,7 +156,7 @@ background-color: white !important; }
 }
     
 #about-section{
-    height: 900px;
+    height: 880px;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -168,7 +170,7 @@ background-color: white !important; }
     padding-top: 40px;
     padding-left: 10px;
     top: 100px;
-    left: 250px;
+    left: 200px;
     position: absolute;
 }
 
@@ -180,7 +182,7 @@ background-color: white !important; }
     padding-top: 40px;
     padding-left: 10px;
     top: 250px;
-    right: 250px;
+    right: 200px;
     position: absolute;
 }
 
@@ -191,8 +193,8 @@ background-color: white !important; }
     height: 100px;
     padding-top: 40px;
     padding-left: 10px;
-    top: 450px;
-    left: 250px;
+    top: 430px;
+    left: 200px;
     position: absolute;
 }
 
@@ -203,8 +205,8 @@ background-color: white !important; }
     height: 100px;
     padding-top: 40px;
     padding-left: 10px;
-    top: 600px;
-    right: 250px;
+    top: 570px;
+    right: 200px;
     position: absolute;
 }
 
@@ -225,11 +227,24 @@ background-color: white !important; }
     text-align: center;
 }
 
+.spacer-2 {
+    font-size: 50px;
+    width: 395px;
+    height: 100px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 10px;
+    text-align: center;
+    left: 500px;
+    position: absolute;
+    color: #fa931c;
+
+}
 
 /*----------------------------media screen----------------- */
 
 @media screen and (max-width: 943px) {
 
 #cover-text {
-        left: 0px;
+        left: 10px;
     }
