--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,8 @@ body {
 
 .navbar-toggler {
     border-color: #fa931c;
+    color:#fa931c
 }
-
-.navbar-toggler-icon.icon-bar{
-background-color: white !important; }
 
 .burgers {
     color:#b5b3c2;
@@ -81,16 +79,14 @@ background-color: white !important; }
  /*----------------------------review-post----------------- */
 
 
-#cover-text {
+.cover-text {
     font-size: 130%;
     font-family: "Roboto", sans-serif;
     letter-spacing: 4px;
-    width: 395px;
+    width: 410px;
     height: 100px;
-    padding-top: 40px;
+    padding-top: 170px;
     padding-left: 10px;
-    top: 200px;
-    left: 250px;
     position: absolute;
     }
 
@@ -129,13 +125,10 @@ background-color: white !important; }
 
 .arrow-1 {
     font-size: 50px;
-    width: 395px;
-    height: 100px;
     padding-top: 40px;
     padding-left: 10px;
     bottom: 10px;
     text-align: center;
-    left: 500px;
     position: absolute;
     color: #fa931c;
 }
@@ -154,60 +147,20 @@ background-color: white !important; }
     text-align: center;
 
 }
-    
+
+.container {
+    padding-top: 75px;
+}
+
+.about-block {
+    padding-top: 20px;
+}
+
 #about-section{
     height: 880px;
     width: 100%;
     overflow: hidden;
     position: relative;
-}
-
-#about-box-1 {
-    font-size: 130%;
-    font-family: "Roboto", sans-serif;
-    width: 395px;
-    height: 100px;
-    padding-top: 40px;
-    padding-left: 10px;
-    top: 100px;
-    left: 200px;
-    position: absolute;
-}
-
-#about-box-2 {
-    font-size: 130%;
-    font-family: "Roboto", sans-serif;
-    width: 395px;
-    height: 100px;
-    padding-top: 40px;
-    padding-left: 10px;
-    top: 250px;
-    right: 200px;
-    position: absolute;
-}
-
-#about-box-3 {
-    font-size: 130%;
-    font-family: "Roboto", sans-serif;
-    width: 395px;
-    height: 100px;
-    padding-top: 40px;
-    padding-left: 10px;
-    top: 430px;
-    left: 200px;
-    position: absolute;
-}
-
-#about-box-4 {
-    font-size: 130%;
-    font-family: "Roboto", sans-serif;
-    width: 395px;
-    height: 100px;
-    padding-top: 40px;
-    padding-left: 10px;
-    top: 570px;
-    right: 200px;
-    position: absolute;
 }
 
 .about-header {
@@ -245,6 +198,40 @@ background-color: white !important; }
 
 @media screen and (max-width: 943px) {
 
-#cover-text {
-        left: 10px;
+#main-image {
+    height: 650px;
+}
+
+.cover-text {
+        padding-top: 150px;
+        padding-left: 25px;
     }
+
+.about-header {
+    color: #fa931c;
+    font-size: 25px;
+    padding: 0;
+    font-weight: 400;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.about-text {
+    color: white;
+    font-size: 20px;
+    margin-top: 0;
+    font-weight: 400;
+    text-align: center;
+}
+
+.container {
+    padding-top: 50px;
+    margin: 0 auto;
+}
+
+.about-block {
+    padding-top: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 15px;
+}
