--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ body {
 #about-image {
     background: url('../images/about-image.jpg') no-repeat bottom right fixed;
     width: 100%;
-    height: 880px; 
+    height: 800px; 
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
@@ -149,7 +149,7 @@ body {
 }
 
 .container {
-    padding-top: 75px;
+    padding-top: 55px;
 }
 
 .about-block {
@@ -157,7 +157,7 @@ body {
 }
 
 #about-section{
-    height: 880px;
+    height: 800px;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -180,20 +180,41 @@ body {
     text-align: center;
 }
 
-.spacer-2 {
-    font-size: 50px;
-    width: 395px;
-    height: 100px;
-    padding-top: 40px;
-    padding-left: 10px;
-    bottom: 10px;
-    text-align: center;
-    left: 500px;
+/*----------------------------Reservation section----------------- */
+#reservation-image {
+    background: url('../images/reservation-image.jpg') no-repeat bottom right fixed;
+    width: 100%;
+    height: 650px; 
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     position: absolute;
-    color: #fa931c;
-
+    overflow: hidden;
+    border-left: 5px solid #fa931c;
+    text-align: center;
 }
 
+.reservation-section{
+    height: 650px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+ .booking {
+    font-size: 100%;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 2px;
+    color: #fa931c;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 100px;
+    }
+
+form {
+    background-color: rgba(70, 70, 70, 0.616);
+    padding: 30px;
+}
 /*----------------------------media screen----------------- */
 
 @media screen and (max-width: 943px) {
