--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,20 +205,19 @@ body {
     width: 600px;
     height: 500px;
     position: absolute;
-    top: 100px;
+    top: 130px;
     text-align: center;
     }
 
 form {
     background-color: rgba(70, 70, 70, 0.616);
     padding: 30px;
-
 }
 
 .btn.btn-outline {
     color: white;
     font-family: "Roboto", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     float: center;
     border-color: #fa931c;
     background-color: rgba(255, 255, 255, 0);
@@ -227,6 +226,15 @@ form {
 .btn.btn-outline:hover {
     color: black;
     background-color: #fa931c;
+}
+
+/*----------------------------footer----------------- */
+
+footer {
+    background-color: black;
+    height: 400px;
+    border-left: 5px solid #fa931c;
+    border-bottom: 5px solid #fa931c;
 }
 
 /*----------------------------media screen----------------- */
