--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,16 @@ body {
     color: #fa931c;
 }
 
+.arrow-1:hover {
+    font-size: 50px;
+    padding-top: 40px;
+    padding-left: 10px;
+    bottom: 10px;
+    text-align: center;
+    position: absolute;
+    color: white;
+}
+
 
 /*----------------------------About----------------- */
 #about-image {
