created readme.md file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ body {
 
 #background-image {
     background: url('../images/burger-menu.jpg') no-repeat bottom right fixed;
+    background-size: cover;
     width: 100%;
     height: 750px; 
     background-size: 100% 100%;
@@ -267,10 +268,10 @@ footer div {
     text-align: center;
     color: #b5b3c2;
     font-family: "Roboto", sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 200;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .fas {
