--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');
  
- /*----------------------------Navbar----------------- */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+ /*----------------------------Navbar----------------- */
 
 .navbar {
     background-color: black;
@@ -9,9 +18,6 @@
     padding-top: 0;
     border-top: 5px solid #fa931c;
     border-left: 5px solid #fa931c;
-}
-body {
-    padding-top:0;
 }
 
 .navbar-brand {
@@ -51,6 +57,10 @@ body {
 
 .burgers {
     color:#b5b3c2;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(250,147,28, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
  /*----------------------------background-image----------------- */
@@ -238,26 +248,24 @@ form {
     background-color: #fa931c;
 }
 /*----------------------------menu Section----------------- */
-
 #menu-image {
     background: url('../images/menu-image.jpg') no-repeat bottom right fixed;
     width: 100%;
     height: 250px; 
-    background-size: cover;
+    background-size: 100% 100%;
     position: absolute;
     overflow: hidden;    
     text-align: center;
-
 }
 
 .menu-title {
     text-align: center;
     font-family: "Oswald",sans-serif;
     margin: 0 auto;
-    top: 50px;
+    top: 40px;
     letter-spacing: 5px;
-    color: white;
-    font-size: 80px;
+    color: #fa931c;
+    font-size: 50px;
     font-weight: 600;
     text-decoration: underline;
 }
@@ -270,15 +278,15 @@ form {
 }
 
 .menu-image-section{
-    height: 250px;
+    height: 150px;
     width: 100%;
-    background-color: #fafafa;
+    background-color: black;
     border-left: 5px solid #fa931c;
 }
 
 .menu-items-description {
     font-family: "Roboto", sans-serif;
-    padding-top: 50px;
+    padding-top: 25px;
     text-align: left;
     padding: 30px;
 }
